--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 requests = "*"
 beautifulsoup4 = "*"
 lxml = "*"
+feedgen = "*"
 
 [dev-packages]
 pytest = "*"
@@ -14,6 +15,7 @@ flake8 = "*"
 mypy = "*"
 pydocstyle = "*"
 black = "*"
+types-requests = "*"
 
 [requires]
 python_version = "3.10"
