--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-__pycache__/
-.mypy_cache/
-.pytest_cache/
-htmlcov/
+__pycache__
+.mypy_cache
+.pytest_cache
+htmlcov
 .coverage
+build
+*.egg-info
